<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="audio_name">音乐文件</string>
    <string name="play">播放</string>
    <string name="replay">重播</string>
    <string name="pause">暂停</string>
    <string name="continues">继续</string>
    <string name="stop">停止</string>
    <string name="file_not_exist">文件不存在</string>

</resources>
